--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
+  color: #212b36;
 }
 
 * {
@@ -31,6 +32,7 @@ ul li {
 
 a {
   text-decoration: none;
+  color: #212b36;
 }
 a:hover {
   text-decoration: underline;
@@ -63,4 +65,116 @@ textarea:focus {
 img {
   max-width: 100%;
   min-height: auto;
+}
+
+.btn button {
+  padding: 8px 22px;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  background-color: #FA541C;
+  box-shadow: 0px 3px 1px -2px rgba(145, 158, 171, 0.2), 0px 2px 2px 0px rgba(145, 158, 171, 0.14), 0px 1px 5px 0px rgba(145, 158, 171, 0.12);
+  height: 48px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.btn button::after {
+  content: "";
+  display: block;
+  width: 7px;
+  height: 200px;
+  margin-left: 50px;
+  background: #fff;
+  box-shadow: 0 0 10px #fff;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5) 0%, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0.5) 100%);
+  left: -40px;
+  top: -100px;
+  z-index: 1;
+  transform: rotate(45deg);
+  position: absolute;
+  -webkit-animation: movingFlare 2s ease-in-out 5s infinite;
+          animation: movingFlare 2s ease-in-out 5s infinite;
+}
+.btn button:hover {
+  opacity: 0.9;
+}
+@-webkit-keyframes movingFlare {
+  0% {
+    left: -30px;
+    margin-left: 0px;
+  }
+  30% {
+    left: 110%;
+    margin-left: 80px;
+  }
+  100% {
+    left: 110%;
+    margin-left: 80px;
+  }
+}
+@keyframes movingFlare {
+  0% {
+    left: -30px;
+    margin-left: 0px;
+  }
+  30% {
+    left: 110%;
+    margin-left: 80px;
+  }
+  100% {
+    left: 110%;
+    margin-left: 80px;
+  }
+}
+
+header {
+  padding: 20px 0;
+}
+header .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .navbar .logo a {
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 21px;
+}
+header .navbar ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+header .navbar ul li {
+  margin: 0 20px;
+}
+header .navbar ul li a {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.content {
+  padding: 120px 0 20px;
+}
+.content .content-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.content .content-wrap .content-desc {
+  max-width: 520px;
+}
+.content .content-wrap .content-desc h1 {
+  font-weight: 900;
+  font-size: 52px;
+  line-height: 64px;
+}
+.content .content-wrap .content-desc p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 10px 0 20px;
+  opacity: 0.7;
 }/*# sourceMappingURL=style.css.map */
