--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,11 +75,16 @@ img {
   background-color: #FA541C;
   box-shadow: 0px 3px 1px -2px rgba(145, 158, 171, 0.2), 0px 2px 2px 0px rgba(145, 158, 171, 0.14), 0px 1px 5px 0px rgba(145, 158, 171, 0.12);
   height: 48px;
-  position: relative;
-  overflow: hidden;
   cursor: pointer;
 }
-.btn button::after {
+.btn button:hover {
+  opacity: 0.9;
+}
+.btn .blink {
+  position: relative;
+  overflow: hidden;
+}
+.btn .blink::after {
   content: "";
   display: block;
   width: 7px;
@@ -95,9 +100,6 @@ img {
   position: absolute;
   -webkit-animation: movingFlare 2s ease-in-out 5s infinite;
           animation: movingFlare 2s ease-in-out 5s infinite;
-}
-.btn button:hover {
-  opacity: 0.9;
 }
 @-webkit-keyframes movingFlare {
   0% {
@@ -156,7 +158,7 @@ header .navbar ul li a {
 }
 
 .content {
-  padding: 120px 0 20px;
+  padding: 120px 0 60px;
 }
 .content .content-wrap {
   display: flex;
@@ -177,4 +179,45 @@ header .navbar ul li a {
   line-height: 24px;
   margin: 10px 0 20px;
   opacity: 0.7;
+}
+.content .content-cards {
+  margin-top: 40px;
+}
+.content .content-cards .content-cards__wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+.content .content-cards .content-cards__wrap .content-cards__item {
+  max-width: 360px;
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ebe9e9;
+}
+.content .content-cards .content-cards__wrap .content-cards__item img {
+  width: 40px;
+}
+.content .content-cards .content-cards__wrap .content-cards__item h4 {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+  margin: 7px 0 5px;
+}
+.content .content-cards .content-cards__wrap .content-cards__item p {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  opacity: 0.8;
+}
+
+#about {
+  padding: 40px 0;
+  background: #eef5fa;
+  height: 100vh;
+}
+#about h1 {
+  font-weight: 900;
+  font-size: 42px;
+  line-height: 51px;
 }/*# sourceMappingURL=style.css.map */
