--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -74,9 +74,14 @@ img {
         background-color: #FA541C;
         box-shadow: 0px 3px 1px -2px rgb(145 158 171 / 20%), 0px 2px 2px 0px rgb(145 158 171 / 14%), 0px 1px 5px 0px rgb(145 158 171 / 12%);
         height: 48px;
+        cursor: pointer;
+        &:hover {
+            opacity: .9;
+        }
+    }
+    .blink {
         position: relative;
         overflow: hidden;
-        cursor: pointer;
         &::after {
             content: "";
             display: block;
@@ -98,9 +103,6 @@ img {
             position: absolute;
             animation: movingFlare 2s ease-in-out 5s infinite;
         }
-        &:hover {
-            opacity: .9;
-        }
     }
     @keyframes movingFlare {
         0% {
@@ -115,7 +117,7 @@ img {
           left: 110%;
           margin-left: 80px;
         }
-      }
+    }
 }
 header {
     padding: 20px 0;
@@ -142,7 +144,7 @@ header {
     }
 }
 .content {
-    padding: 120px 0 20px;
+    padding: 120px 0 60px;
     .content-wrap {
         display: flex;
         justify-content: space-between;
@@ -158,5 +160,39 @@ header {
                 opacity: .7;
             }
         }
+    }
+    .content-cards {
+        margin-top: 40px;
+        .content-cards__wrap {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            text-align: center;
+            .content-cards__item {
+                max-width: 360px;
+                width: 100%;
+                padding: 20px;
+                border: 1px solid #ebe9e9;
+                img {
+                    width: 40px;
+                }
+                h4 {
+                    @include _txtStyle(500, 16px, 21px);
+                    margin: 7px 0 5px;
+                }
+                p {
+                    @include _txtStyle(300, 14px, 18px);
+                    opacity: .8;
+                }
+            }
+        }
+    }
+}
+#about {
+    padding: 40px 0;
+    background: #eef5fa;
+    height: 100vh;
+    h1 {
+        @include _txtStyle(900, 42px, 51px);
     }
 }
