--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,8 +216,69 @@ header .navbar ul li a {
 }
 
 #services {
-  height: 100vh;
-  background: #ebe9e9;
+  padding: 60px 0 30px;
+}
+#services h5 {
+  text-align: center;
+  max-width: 174px;
+  width: 100%;
+  margin: 0 auto;
+}
+#services p {
+  text-align: center;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 21px;
+  max-width: 720px;
+  width: 100%;
+  margin: 14px auto;
+  opacity: 0.7;
+}
+#services .services-wrap {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 30px 0;
+}
+#services .services-wrap .services-wrap__item {
+  max-width: 320px;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  margin: 20px 0;
+  transition: 0.3s all;
+  cursor: default;
+  border-radius: 7px;
+}
+#services .services-wrap .services-wrap__item:hover {
+  background: #FA541C;
+  transform: scale(1.1);
+}
+#services .services-wrap .services-wrap__item:hover h3, #services .services-wrap .services-wrap__item:hover h6 {
+  color: #fff;
+}
+#services .services-wrap .services-wrap__item:hover svg {
+  fill: #fff;
+}
+#services .services-wrap .services-wrap__item svg {
+  fill: #FA541C;
+  transition: 0.3s all;
+}
+#services .services-wrap .services-wrap__item h3 {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  margin: 7px 0;
+  transition: 0.3s all;
+}
+#services .services-wrap .services-wrap__item h6 {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  transition: 0.3s all;
+}
+#services .btn {
+  text-align: center;
 }
 
 #about {
@@ -252,8 +313,8 @@ header .navbar ul li a {
 
 .desc h5 {
   font-weight: 500;
-  font-size: 18px;
-  line-height: 18px;
+  font-size: 21px;
+  line-height: 21px;
   position: relative;
   padding-left: 40px;
 }
