--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -193,8 +193,63 @@ header {
     }
 }
 #services {
-    height: 100vh;
-    background: #ebe9e9;
+    padding: 60px 0 30px;
+    h5 {
+        text-align: center;
+        max-width: 174px;
+        width: 100%;
+        margin: 0 auto;
+    }
+    p {
+        text-align: center;
+        @include _txtStyle(300, 16px, 21px);
+        max-width: 720px;
+        width: 100%;
+        margin: 14px auto;
+        opacity: .7;
+    }
+    .services-wrap {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        padding: 30px 0;
+        .services-wrap__item {
+            max-width: 320px;
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+            margin: 20px 0;
+            transition: .3s all;
+            cursor: default;
+            border-radius: 7px;
+            &:hover {
+                background: #FA541C;
+                transform: scale(1.1);
+                h3, h6 {
+                    color: #fff
+                }
+                svg {
+                    fill: #fff;
+                }
+            }
+            svg {
+                fill: #FA541C;
+                transition: .3s all;
+            }
+            h3 {
+                @include _txtStyle(700, 16px, 21px);
+                margin: 7px 0;
+                transition: .3s all;
+            }
+            h6 {
+                @include _txtStyle(400, 14px, 18px);
+                transition: .3s all;
+            }
+        }
+    }
+    .btn {
+        text-align: center;
+    }
 }
 #about {
     padding: 60px 0;
@@ -223,7 +278,7 @@ header {
 }
 .desc {
     h5 {
-        @include _txtStyle(500, 18px, 18px);
+        @include _txtStyle(500, 21px, 21px);
         position: relative;
         padding-left: 40px;
         &::after {
