--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,6 +311,37 @@ header .navbar ul li a {
   padding-left: 60px;
 }
 
+#contacts {
+  padding: 60px 0;
+}
+#contacts h5 {
+  max-width: 200px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+#contacts .contacts-wrap {
+  display: flex;
+  margin-top: 40px;
+}
+#contacts .contacts-wrap .contacts-wrap__item {
+  width: 50%;
+}
+#contacts .contacts-wrap .contacts-wrap__item h2 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 42px;
+}
+#contacts .contacts-wrap .contacts-wrap__item p {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 21px;
+  padding: 20px 0 10px;
+  max-width: 420px;
+  border-bottom: 2px solid #9e9c9c;
+  margin-bottom: 20px;
+}
+
 .desc h5 {
   font-weight: 500;
   font-size: 21px;
