--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -276,6 +276,32 @@ header {
         }
     }
 }
+#contacts {
+    padding: 60px 0;
+    h5 {
+        max-width: 200px;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .contacts-wrap {
+        display: flex;
+        margin-top: 40px;
+        .contacts-wrap__item {
+            width: 50%;
+            h2 {
+                @include _txtStyle(700, 32px, 42px)
+            }
+            p {
+                @include _txtStyle(300, 16px, 21px);
+                padding: 20px 0 10px;
+                max-width: 420px;
+                border-bottom: 2px solid #9e9c9c;
+                margin-bottom: 20px;
+            }
+        }   
+    }
+}
 .desc {
     h5 {
         @include _txtStyle(500, 21px, 21px);
