--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,17 +68,22 @@ img {
 }
 
 .btn button {
-  padding: 8px 22px;
+  padding: 0 20px;
   border: none;
   border-radius: 8px;
   color: #fff;
   background-color: #FA541C;
   box-shadow: 0px 3px 1px -2px rgba(145, 158, 171, 0.2), 0px 2px 2px 0px rgba(145, 158, 171, 0.14), 0px 1px 5px 0px rgba(145, 158, 171, 0.12);
-  height: 48px;
+  height: 44px;
   cursor: pointer;
 }
 .btn button:hover {
   opacity: 0.9;
+}
+@media (max-width: 991px) {
+  .btn button {
+    display: none;
+  }
 }
 .btn .blink {
   position: relative;
@@ -130,8 +135,40 @@ img {
   }
 }
 
+.top {
+  background: rgb(1, 111, 189);
+}
+.top .top-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+}
+.top .top-wrap .top-wrap__item .switch {
+  width: 50px;
+  height: 20px;
+  background: #fff;
+  border-radius: 7px;
+  display: flex;
+  align-items: center;
+  padding: 0 2px;
+  cursor: pointer;
+}
+.top .top-wrap .top-wrap__item .switch .switch-item {
+  width: 20px;
+  height: 17px;
+  border-radius: 7px;
+  background: #333;
+}
+
 header {
-  padding: 20px 0;
+  padding: 16px 0;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background: #fff;
+  z-index: 999;
+  border-bottom: 1px solid #e6e2e2;
 }
 header .navbar {
   display: flex;
@@ -399,7 +436,7 @@ header .navbar ul li a {
 }
 
 footer {
-  padding: 40px 0;
+  padding: 40px 0 0;
   background: #000;
   color: #fff !important;
 }
@@ -418,6 +455,17 @@ footer .footer-wrap .footer-links ul {
 }
 footer .footer-wrap .footer-links ul li {
   margin-left: 40px;
+}
+footer p {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  padding: 30px 0;
+  opacity: 0.7;
+  border-top: 1px solid #444;
+  border-bottom: 1px solid #444;
+  margin-top: 30px;
 }
 
 .desc h5 {
