--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -65,18 +65,25 @@ img {
     font-size: $fz;
     line-height: $lh;
 }
+@mixin _991px {
+    @media (max-width: 991px) { @content; }
+}
+
 .btn {
     button {
-        padding: 8px 22px;
+        padding: 0 20px;
         border: none;
         border-radius: 8px;
         color: #fff;
         background-color: #FA541C;
         box-shadow: 0px 3px 1px -2px rgb(145 158 171 / 20%), 0px 2px 2px 0px rgb(145 158 171 / 14%), 0px 1px 5px 0px rgb(145 158 171 / 12%);
-        height: 48px;
+        height: 44px;
         cursor: pointer;
         &:hover {
             opacity: .9;
+        }
+        @include _991px() {
+            display: none;
         }
     }
     .blink {
@@ -119,8 +126,40 @@ img {
         }
     }
 }
+.top {
+    background: rgb(1, 111, 189);
+    .top-wrap {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 40px;
+        .top-wrap__item {
+            .switch {
+                width: 50px;
+                height: 20px;
+                background: #fff;
+                border-radius: 7px;
+                display: flex;
+                align-items: center;
+                padding: 0 2px;
+                cursor: pointer;
+                .switch-item {
+                    width: 20px;
+                    height: 17px;
+                    border-radius: 7px;
+                    background: #333;
+                }
+            }
+        }
+    }
+}
 header {
-    padding: 20px 0;
+    padding: 16px 0;
+    position: sticky;
+    top: 0;
+    background: #fff;
+    z-index: 999;
+    border-bottom: 1px solid #e6e2e2;
     .navbar {
         display: flex;
         justify-content: space-between;
@@ -353,7 +392,7 @@ header {
     }
 }
 footer {
-    padding: 40px 0;
+    padding: 40px 0 0;
     background: #000;
     color: #fff !important;
     a {
@@ -373,6 +412,15 @@ footer {
                 }
             }
         }
+    }
+    p {
+        @include _txtStyle(300, 14px, 18px);
+        text-align: center;
+        padding: 30px 0;
+        opacity: .7;
+        border-top: 1px solid #444;
+        border-bottom: 1px solid #444;
+        margin-top: 30px;
     }
 }
 .desc {
