--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,23 +142,32 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 40px;
+  padding: 7px 0;
 }
-.top .top-wrap .top-wrap__item .switch {
-  width: 50px;
-  height: 20px;
-  background: #fff;
-  border-radius: 7px;
+.top .top-wrap .top-wrap__item .lang img {
+  width: 20px;
+}
+.top .top-wrap .top-wrap__item .lang a {
   display: flex;
   align-items: center;
-  padding: 0 2px;
-  cursor: pointer;
 }
-.top .top-wrap .top-wrap__item .switch .switch-item {
-  width: 20px;
-  height: 17px;
-  border-radius: 7px;
-  background: #333;
+.top .top-wrap .top-wrap__item .lang a:hover {
+  text-decoration: none;
+}
+.top .top-wrap .top-wrap__item .lang a span {
+  color: #fff;
+  margin-left: 7px;
+}
+.top .top-wrap .top-wrap__item .social-media {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.top .top-wrap .top-wrap__item .social-media .social-media__icon {
+  margin-left: 10px;
+}
+.top .top-wrap .top-wrap__item .social-media .social-media__icon a svg path {
+  fill: #fff;
 }
 
 header {
