--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -132,22 +132,37 @@ img {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 40px;
+        padding: 7px 0;
         .top-wrap__item {
-            .switch {
-                width: 50px;
-                height: 20px;
-                background: #fff;
-                border-radius: 7px;
-                display: flex;
-                align-items: center;
-                padding: 0 2px;
-                cursor: pointer;
-                .switch-item {
+            .lang {
+                img {
                     width: 20px;
-                    height: 17px;
-                    border-radius: 7px;
-                    background: #333;
+                }
+                a {
+                    display: flex;
+                    align-items: center;
+                    &:hover {
+                        text-decoration: none;
+                    }
+                    span {
+                        color: #fff;
+                        margin-left: 7px;
+                    }
+                }
+            }
+            .social-media {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                .social-media__icon {
+                    margin-left: 10px;
+                    a {
+                        svg {
+                            path {
+                                fill: #fff;
+                            }
+                        }
+                    }
                 }
             }
         }
