--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,19 +70,6 @@ img {
 }
 
 .btn {
-    button {
-        padding: 0 20px;
-        border: none;
-        border-radius: 8px;
-        color: #fff;
-        background-color: #FA541C;
-        box-shadow: 0px 3px 1px -2px rgb(145 158 171 / 20%), 0px 2px 2px 0px rgb(145 158 171 / 14%), 0px 1px 5px 0px rgb(145 158 171 / 12%);
-        height: 44px;
-        cursor: pointer;
-        &:hover {
-            opacity: .9;
-        }
-    }
     .blink {
         position: relative;
         overflow: hidden;
@@ -108,6 +95,32 @@ img {
             animation: movingFlare 2s ease-in-out 5s infinite;
         }
     }
+    .btn-div {
+        border: none;
+        border-radius: 8px;
+        background-color: #FA541C;
+        box-shadow: 0px 3px 1px -2px rgb(145 158 171 / 20%), 0px 2px 2px 0px rgb(145 158 171 / 14%), 0px 1px 5px 0px rgb(145 158 171 / 12%);
+        height: 44px;
+        width: fit-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        a {
+            font-weight: 400;
+            color: #fff;
+            font-size: 14px;
+            height: 100%;
+            line-height: 44px;
+            padding: 0 20px;
+            &:hover {
+                text-decoration: none;
+            }
+        }
+        &:hover {
+            opacity: .9;
+        }
+    }
     @keyframes movingFlare {
         0% {
           left: -30px;
@@ -120,6 +133,14 @@ img {
         100% {
           left: 110%;
           margin-left: 80px;
+        }
+    }
+}
+.logo {
+    a {
+        @include _txtStyle(700, 21px, 21px);
+        span {
+            color: #FA541C;
         }
     }
 }
@@ -176,11 +197,6 @@ header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        .logo {
-            a {
-                @include _txtStyle(700, 21px, 21px);
-            }
-        }
         ul {
             display: flex;
             align-items: center;
@@ -298,8 +314,8 @@ header {
             }
         }
     }
-    .btn {
-        text-align: center;
+    .btn-div {
+        margin: 0 auto;
     }
 }
 #about {
@@ -407,9 +423,8 @@ header {
                 left: 70px;
             }
         }
-        .btn {
-            text-align: center;
-            margin-top: 30px;
+        .btn-div {
+            margin: 30px auto 0;
         }
     }
 }
@@ -453,6 +468,18 @@ header {
             h3 {
                 @include _txtStyle(500, 18px, 24px);
                 text-align: center;
+            }
+            .soc-medias {
+                h3 {
+                    text-align: left;
+                    margin: 30px 0 12px;
+                    font-weight: 400;
+                    font-size: 16px;
+                }
+                svg {
+                    fill: #fff;
+                    margin-right: 10px;
+                }
             }
             form {
                 max-width: 460px;
